tests/neg/i2470.scala
object Foo extends AnyVal // error: value class needs to have exactly one val parameter
